--- a/src/DMCopilot/DMCopilot.Backend/Shared/NavMenu.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/NavMenu.razor
@@ -14,19 +14,19 @@
      <BarMenu>
         <BarStart>
             <BarItem>
-                <BarLink To="worlds">
+                <BarLink To="world">
                     <BarIcon IconName="IconName.Map" />
                     Worlds
                 </BarLink>
             </BarItem>
             <BarItem>
-                <BarLink To="campaigns">
+                <BarLink To="campaign">
                     <BarIcon IconName="IconName.History" />
                     Campaigns
                 </BarLink>
             </BarItem>
             <BarItem>
-                <BarLink To="characters">
+                <BarLink To="character">
                     <BarIcon IconName="IconName.Users" />
                     Characters
                 </BarLink>
