--- a/src/DMCopilot/DMCopilot.Backend/_Imports.razor
+++ b/src/DMCopilot/DMCopilot.Backend/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Blazorise
+@using Blazorise.LoadingIndicator
 @using DMCopilot.Backend
 @using DMCopilot.Backend.Shared
 @using DMCopilot.Shared.Services
