Update world layout

--- a/src/DMCopilot/DMCopilot.Backend/Shared/WorldList.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/WorldList.razor
@@ -13,6 +13,11 @@
         <CardText>
             Select one of the existing worlds or create a new one by clicking Create. Generating a new world can take a few seconds and requires just a few words of input.
         </CardText>
+        <CardActions>
+            <Button Color="Color.Primary" Type="ButtonType.Link" To="world/new" Margin="Margin.Is2.FromTop">
+                Create <Icon Name="IconName.Add" />
+            </Button>
+        </CardActions>
     </CardBody>
 </Card>
 
