--- a/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
@@ -1,12 +1,13 @@
 @using DMCopilot.Shared.Services
 @using DMCopilot.Shared.Data
 @using DMCopilot.Shared.Models
+@using System.Text.Json
 
 @inject ISemanticKernelService semanticKernelService
 @inject IWorldRepository worldRepository
 @inject NavigationManager navigationManager
 
-<Card Background="Background.Info" WhiteText>
+<Card Background="Background.Primary" WhiteText>
     <CardBody>
         <CardTitle Size="3">
             Generate a World
@@ -19,7 +20,7 @@
                 <MemoEdit @bind-Text="@WorldDetails" AutoSize />
              </FieldBody>
          </Field>
-         <Button @onclick="CreateWorld" Color="Color.Primary" Margin="Margin.Is2.FromTop" Disabled="@(loadingVisible)">
+         <Button @onclick="GenerateWorld" Color="Color.Dark" Margin="Margin.Is2.FromTop" Disabled="@(loadingVisible)">
              Generate <Icon Name="IconName.ArrowRight" />
          </Button>
      </CardBody>
@@ -48,13 +49,7 @@
                          <MemoEdit @bind-Text="@World.History" AutoSize />
                      </FieldBody>
                  </Field>
-                 <Field>
-                     <FieldLabel>Geography</FieldLabel>
-                     <FieldBody>
-                         <MemoEdit @bind-Text="@World.Geography" AutoSize />
-                     </FieldBody>
-                 </Field>
-                 <Button @onclick="SaveWorld" Color="Color.Primary" Margin="Margin.Is2.FromTop" Disabled="@(loadingVisible)">
+                 <Button @onclick="SaveWorld" Color="Color.Dark" Margin="Margin.Is2.FromTop" Disabled="@(loadingVisible)">
                      Save <Icon Name="IconName.Save" />
                  </Button>
              </CardBody>
@@ -87,15 +82,14 @@
         }
     }
 
-    private async Task CreateWorld()
+    private async Task GenerateWorld()
     {
         loadingVisible = true;
 
-        var result = await semanticKernelService.InvokePluginFunctionAsync("World", "CreateWorld", new Dictionary<String, String> {
+        var functionResult = await semanticKernelService.InvokePluginFunctionAsync("World", "CreateWorld", new Dictionary<String, String> {
             {"input", WorldDetails}
         });
 
-        // Use the result in some way
         Console.WriteLine(result);
 
         loadingVisible = false;
