--- a/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
@@ -90,7 +90,7 @@
             {"input", WorldDetails}
         });
 
-        Console.WriteLine(result);
+        Console.WriteLine(functionResult.Result);
 
         loadingVisible = false;
     }
