--- a/src/DMCopilot/DMCopilot.Backend/Shared/WorldList.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/WorldList.razor
@@ -14,10 +14,10 @@
             Select one of the existing worlds or create a new one by clicking Create. Generating a new world can take a few seconds and requires just a few words of input.
         </CardText>
         <CardActions>
-            <Button Color="Color.Dark" Type="ButtonType.Link" To="world/new" Margin="Margin.Is2.FromTop">
+            <Button Color="Color.Dark" Type="ButtonType.Link" @onclick="CreateButtonClick" Margin="Margin.Is2.FromTop">
                 Create <Icon Name="IconName.Add" />
             </Button>
-            <Button Color="Color.Dark" Type="ButtonType.Link" To="world/new" Margin="Margin.Is2.FromTop">
+            <Button Color="Color.Dark" Type="ButtonType.Link" Margin="Margin.Is2.FromTop">
                 Delete Selected <Icon Name="IconName.Delete" />
             </Button>
         </CardActions>
@@ -41,9 +41,9 @@
                 {
                     <TableRow @key="@world.Id">
                         <TableRowHeader><Check TValue="bool"/></TableRowHeader>
-                        <TableRowCell>@world.Name</TableRowCell>
-                        <TableRowCell>@world.Description</TableRowCell>
-                        <TableRowCell>@world.History</TableRowCell>
+                        <TableRowCell @onclick="(e) => WorldClick(e, world)">@world.Name</TableRowCell>
+                        <TableRowCell @onclick="(e) => WorldClick(e, world)">@world.Description</TableRowCell>
+                        <TableRowCell @onclick="(e) => WorldClick(e, world)">@world.History</TableRowCell>
                     </TableRow>
                 }
             </TableBody>
@@ -63,15 +63,26 @@
 
     protected override async Task OnParametersSetAsync()
     {
-        await GetWorlds();
+        await LoadWorlds();
     }
 
-    private async Task GetWorlds()
+    private async Task LoadWorlds()
     {
         if (Tenant != null)
         {
             worlds = await worldRepository.GetWorldsByTenantAsync(Tenant.Id);
             loadingVisible = false;
+            await InvokeAsync(StateHasChanged);
         }
+    }
+
+    private async void WorldClick(MouseEventArgs e, World world)
+    {
+        navigationManager.NavigateTo($"/world/{world.Id}");
+    }
+
+    private async void CreateButtonClick()
+    {
+        navigationManager.NavigateTo("/world/new");        
     }
 }
