Moved all data access into Data Project

--- a/src/DMCopilot/DMCopilot.Backend/Pages/CharacterEdit.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/CharacterEdit.razor
@@ -1,8 +1,8 @@
 @page "/character/{CharacterId?}"
 
 @using DMCopilot.Shared.Services
-@using DMCopilot.Shared.Data
-@using DMCopilot.Shared.Models
+@using DMCopilot.Data.Models
+@using DMCopilot.Data.Repositories
 
 @inject ISemanticKernelService semanticKernelService
 @inject ICharacterRepository characterRepository
