--- a/src/DMCopilot/DMCopilot.Backend/Pages/CharacterPage.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/CharacterPage.razor
@@ -1,8 +1,8 @@
 @page "/character"
 
 @using DMCopilot.Shared.Services
-@using DMCopilot.Shared.Data
-@using DMCopilot.Shared.Models
+@using DMCopilot.Data.Models
+@using DMCopilot.Data.Repositories
 
 @inject ICharacterRepository characterRepository
 
