--- a/src/DMCopilot/DMCopilot.Backend/Pages/TenantPage.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/TenantPage.razor
@@ -1,8 +1,8 @@
 @page "/tenant"
 
 @using DMCopilot.Shared.Services
-@using DMCopilot.Shared.Data
-@using DMCopilot.Shared.Models
+@using DMCopilot.Data.Models
+@using DMCopilot.Data.Repositories
 
 @inject ITenantRepository tenantRepository
 
