--- a/src/DMCopilot/DMCopilot.Backend/Pages/WorldPage.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/WorldPage.razor
@@ -3,8 +3,8 @@
 @page "/world/{WorldId:guid}"
 
 @using DMCopilot.Shared.Services
-@using DMCopilot.Shared.Data
-@using DMCopilot.Shared.Models
+@using DMCopilot.Data.Models
+@using DMCopilot.Data.Repositories
 
 @inject IWorldRepository worldRepository
 @inject NavigationManager navigationManager
