--- a/src/DMCopilot/DMCopilot.Backend/Shared/MainLayout.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-@using DMCopilot.Shared.Models
+@using DMCopilot.Data.Models
 @using DMCopilot.Shared.Services
 
 @inject IAccessService AccessService
