--- a/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
@@ -1,6 +1,6 @@
 @using DMCopilot.Shared.Services
-@using DMCopilot.Shared.Data
-@using DMCopilot.Shared.Models
+@using DMCopilot.Data.Repositories
+@using DMCopilot.Data.Models
 @using System.Text.Json
 
 @inject ISemanticKernelService semanticKernelService
