--- a/src/DMCopilot/DMCopilot.Backend/Shared/WorldList.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/WorldList.razor
@@ -1,6 +1,6 @@
 ﻿@using DMCopilot.Shared.Services
-@using DMCopilot.Shared.Data
-@using DMCopilot.Shared.Models
+@using DMCopilot.Data.Models
+@using DMCopilot.Data.Repositories
 
 @inject IWorldRepository worldRepository
 @inject NavigationManager navigationManager
