--- a/src/DMCopilot/DMCopilot.Backend/Pages/WorldPage.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/WorldPage.razor
@@ -3,7 +3,7 @@
 @page "/world/{WorldId:guid}"
 
 @using DMCopilot.Shared.Services
-@using DMCopilot.Data.Models
+@using DMCopilot.Entities.Models
 @using DMCopilot.Data.Repositories
 
 @inject IWorldRepository worldRepository
