--- a/src/DMCopilot/DMCopilot.Backend/Shared/LoginDisplay.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/LoginDisplay.razor
@@ -1,6 +1,6 @@
 ﻿@using Blazorise
 
-@using DMCopilot.Data.Models
+@using DMCopilot.Entities.Models
 @using DMCopilot.Shared.Services
 
 <AuthorizeView>
