--- a/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
@@ -1,6 +1,6 @@
 @using DMCopilot.Shared.Services
 @using DMCopilot.Data.Repositories
-@using DMCopilot.Data.Models
+@using DMCopilot.Entities.Models
 @using System.Text.Json
 
 @inject ISemanticKernelService semanticKernelService
