--- a/src/DMCopilot/DMCopilot.Backend/Shared/WorldList.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/WorldList.razor
@@ -1,5 +1,5 @@
 ﻿@using DMCopilot.Shared.Services
-@using DMCopilot.Data.Models
+@using DMCopilot.Entities.Models
 @using DMCopilot.Data.Repositories
 
 @inject IWorldRepository worldRepository
