--- a/src/DMCopilot/DMCopilot.Backend/Pages/CharacterEdit.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/CharacterEdit.razor
@@ -1,7 +1,7 @@
 @page "/character/{CharacterId?}"
 
 @using DMCopilot.Shared.Services
-@using DMCopilot.Data.Models
+@using DMCopilot.Entities.Models
 @using DMCopilot.Data.Repositories
 
 @inject ISemanticKernelService semanticKernelService
