--- a/src/DMCopilot/DMCopilot.Backend/Pages/CharacterPage.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/CharacterPage.razor
@@ -1,7 +1,7 @@
 @page "/character"
 
 @using DMCopilot.Shared.Services
-@using DMCopilot.Data.Models
+@using DMCopilot.Entities.Models
 @using DMCopilot.Data.Repositories
 
 @inject ICharacterRepository characterRepository
