--- a/src/DMCopilot/DMCopilot.Backend/Pages/TenantPage.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/TenantPage.razor
@@ -1,7 +1,7 @@
 @page "/tenant"
 
 @using DMCopilot.Shared.Services
-@using DMCopilot.Data.Models
+@using DMCopilot.Entities.Models
 @using DMCopilot.Data.Repositories
 
 @inject ITenantRepository tenantRepository
