Refactor partially completed

--- a/src/DMCopilot/DMCopilot.Backend/Pages/CharacterEdit.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/CharacterEdit.razor
@@ -5,7 +5,7 @@
 @using DMCopilot.Data.Repositories
 
 @inject ISemanticKernelService semanticKernelService
-@inject ICharacterRepository characterRepository
+@inject CharacterRepository characterRepository
 
 <h4>Character</h4>
 
