--- a/src/DMCopilot/DMCopilot.Backend/Pages/TenantPage.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/TenantPage.razor
@@ -4,7 +4,7 @@
 @using DMCopilot.Entities.Models
 @using DMCopilot.Data.Repositories
 
-@inject ITenantRepository tenantRepository
+@inject TenantRepository tenantRepository
 
 <h4>Tenants</h4>
 
