--- a/src/DMCopilot/DMCopilot.Backend/Pages/WorldPage.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/WorldPage.razor
@@ -6,7 +6,7 @@
 @using DMCopilot.Entities.Models
 @using DMCopilot.Data.Repositories
 
-@inject IWorldRepository worldRepository
+@inject WorldRepository worldRepository
 @inject NavigationManager navigationManager
 
 <CascadingValue Value="@Account">
