--- a/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
@@ -4,7 +4,7 @@
 @using System.Text.Json
 
 @inject ISemanticKernelService semanticKernelService
-@inject IWorldRepository worldRepository
+@inject WorldRepository worldRepository
 @inject NavigationManager navigationManager
 
 <Card Background="Background.Primary" WhiteText>
