--- a/src/DMCopilot/DMCopilot.Backend/Shared/WorldList.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/WorldList.razor
@@ -2,7 +2,7 @@
 @using DMCopilot.Entities.Models
 @using DMCopilot.Data.Repositories
 
-@inject IWorldRepository worldRepository
+@inject WorldRepository worldRepository
 @inject NavigationManager navigationManager
 
 <Card Background="Background.Primary" WhiteText>
