--- a/src/DMCopilot/DMCopilot.Backend/Pages/CharacterPage.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/CharacterPage.razor
@@ -4,7 +4,7 @@
 @using DMCopilot.Entities.Models
 @using DMCopilot.Data.Repositories
 
-@inject ICharacterRepository characterRepository
+@inject CharacterRepository characterRepository
 
 <h4>Characters</h4>
 
