--- a/src/DMCopilot/DMCopilot.Backend/_Imports.razor
+++ b/src/DMCopilot/DMCopilot.Backend/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using System.Net.Http
+﻿@using System.Diagnostics
+@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -11,4 +12,3 @@
 @using DMCopilot.Backend
 @using DMCopilot.Backend.Shared
 @using DMCopilot.Shared.Services
-@using System.Diagnostics
