--- a/src/DMCopilot/DMCopilot.Backend/Pages/TenantPage.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/TenantPage.razor
@@ -1,6 +1,6 @@
 @page "/tenant"
 
-@using DMCopilot.Shared.Services
+@using DMCopilot.Services
 @using DMCopilot.Entities.Models
 @using DMCopilot.Data.Repositories
 
