--- a/src/DMCopilot/DMCopilot.Backend/Pages/WorldPage.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/WorldPage.razor
@@ -2,7 +2,7 @@
 @page "/world/new"
 @page "/world/{WorldId:guid}"
 
-@using DMCopilot.Shared.Services
+@using DMCopilot.Services
 @using DMCopilot.Entities.Models
 @using DMCopilot.Data.Repositories
 
