--- a/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
@@ -1,9 +1,9 @@
-@using DMCopilot.Shared.Services
+@using DMCopilot.Services
 @using DMCopilot.Data.Repositories
 @using DMCopilot.Entities.Models
 @using System.Text.Json
 
-@inject ISemanticKernelService semanticKernelService
+@inject SemanticKernelService semanticKernelService
 @inject WorldRepository worldRepository
 @inject NavigationManager navigationManager
 
