--- a/src/DMCopilot/DMCopilot.Backend/_Imports.razor
+++ b/src/DMCopilot/DMCopilot.Backend/_Imports.razor
@@ -11,4 +11,4 @@
 @using Blazorise.LoadingIndicator
 @using DMCopilot.Backend
 @using DMCopilot.Backend.Shared
-@using DMCopilot.Shared.Services
+@using DMCopilot.Services
