--- a/src/DMCopilot/DMCopilot.Backend/Pages/CharacterPage.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/CharacterPage.razor
@@ -1,6 +1,6 @@
 @page "/character"
 
-@using DMCopilot.Shared.Services
+@using DMCopilot.Services
 @using DMCopilot.Entities.Models
 @using DMCopilot.Data.Repositories
 
