--- a/src/DMCopilot/DMCopilot.Backend/Shared/WorldList.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/WorldList.razor
@@ -1,4 +1,4 @@
-﻿@using DMCopilot.Shared.Services
+﻿@using DMCopilot.Services
 @using DMCopilot.Entities.Models
 @using DMCopilot.Data.Repositories
 
