--- a/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/WorldEdit.razor
@@ -78,7 +78,7 @@
             if (navigationManager.Uri.EndsWith("/world/new"))
                 World = new World(Guid.NewGuid().ToString(), Tenant.Id, "New World", "A new world!");
             else if (WorldId != null)
-                World = await worldRepository.GetWorldAsync(WorldId, Tenant.Id);
+                World = await worldRepository.FindByWorldIdAsync(WorldId, Tenant.Id);
         }
     }
 
@@ -98,9 +98,9 @@
     private async Task SaveWorld()
     {
         if (WorldId == null)
-            await worldRepository.CreateWorldAsync(World);
+            await worldRepository.CreateAsync(World);
         else
-            await worldRepository.UpdateWorldAsync(World.Id, World);
+            await worldRepository.UpsertAsync(World);
 
         navigationManager.NavigateTo("/world");
     }
