Services now loading

--- a/src/DMCopilot/DMCopilot.Backend/Pages/WorldPage.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/WorldPage.razor
@@ -1,6 +1,6 @@
 @page "/world"
 @page "/world/new"
-@page "/world/{WorldId:guid}"
+@page "/world/{WorldId}"
 
 @using DMCopilot.Services
 @using DMCopilot.Entities.Models
