--- a/src/GMCopilot/GMCopilot.Backend/Shared/NavMenu.razor
+++ b/src/GMCopilot/GMCopilot.Backend/Shared/NavMenu.razor
@@ -14,9 +14,9 @@
      <BarMenu>
         <BarStart>
             <BarItem>
-                <BarLink To="world">
+                <BarLink To="universe">
                     <BarIcon IconName="IconName.Map" />
-                    Worlds
+                    Universes
                 </BarLink>
             </BarItem>
         </BarStart>
